--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mutyx</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
-	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
@@ -17,8 +17,8 @@
                 <div class="site-header-inner">
                     <div class="brand header-brand">
                         <h1 class="m-0">
-							<a href="#">
-								<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                            <a href="#">
+                                <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
                             </a>
                         </h1>
                     </div>
@@ -30,45 +30,44 @@
             <section class="hero">
                 <div class="container">
                     <div class="hero-inner">
-						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Multyx</h1>
-	                        <p class="hero-paragraph">A stealth mode company</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="mailto: info@multyx.ai">Get in touch</a></div>
-						</div>
-						<div class="hero-figure anime-element">
-							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
-								<rect width="528" height="396" style="fill:transparent;" />
-							</svg>
-							<div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
-							<div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
-							<div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
-							<div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
-							<div class="hero-figure-box hero-figure-box-05"></div>
-							<div class="hero-figure-box hero-figure-box-06"></div>
-							<div class="hero-figure-box hero-figure-box-07"></div>
-							<div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
-							<div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
-							<div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
-						</div>
+                        <div class="hero-copy">
+                            <h1 class="hero-title mt-0">Multyx</h1>
+                            <p class="hero-paragraph">A stealth mode company</p>
+                            <div class="hero-cta"><a class="button button-primary" href="mailto: info@multyx.ai">Get in touch</a></div>
+                        </div>
+                        <div class="hero-figure anime-element">
+                            <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
+                                <rect width="528" height="396" style="fill:transparent;" />
+                            </svg>
+                            <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
+                            <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
+                            <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
+                            <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
+                            <div class="hero-figure-box hero-figure-box-05"></div>
+                            <div class="hero-figure-box hero-figure-box-06"></div>
+                            <div class="hero-figure-box hero-figure-box-07"></div>
+                            <div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
+                            <div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
+                            <div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            
 
-			<section class="cta section">
-				<div class="container">
-					<div class="cta-inner section-inner ">
+            <section class="cta section">
+                <div class="container">
+                    <div class="cta-inner section-inner ">
                         <div class="container">
-						<h3 class="section-title mt-0">Who we are?</h3>
-                        <p class="text-sm mb-0">We are a group of AI and security scientists with a great vision. We are developing a technology that, we believe, would ultimately promote mankind.</p>
+                        <h3 class="section-title mt-0">The Team</h3>
+                        <p class="text-sm mb-0">We are a group of visionary machine-learning and security scientists with a mission to make AI solutions accessible to all domains. Our initiative involves cutting-edge research in the fields of cloud computing, AI, and confidentiality.</p>
                         </div>
-						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="mailto: info@multyx.ai">Get in touch</a>
-						</div>
-					</div>
-				</div>
-			</section>
+                        <div class="cta-cta">
+                            <a class="button button-primary button-wide-mobile" href="mailto: info@multyx.ai">Get in touch</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section class="features section">
                 <div class="container">
@@ -80,7 +79,7 @@
                                         <img src="dist/images/feature-icon-01.svg" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title mt-24">AI</h4>
-                                    <p class="text-sm mb-0">Artificial intelligence has contributed tremendously to various domains in the past decade. Our technology is designed to allow for more domains to adopt AI-based solutions.</p>
+                                    <p class="text-sm mb-0">Artificial intelligence has evolved tremendously in the past decade.</br>That said, security concerns still curb the adoption of AI-based solutions in various industry domains.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -89,7 +88,7 @@
                                         <img src="dist/images/feature-icon-02.svg" alt="Feature 02">
                                     </div>
                                     <h4 class="feature-title mt-24">Confidentiality</h4>
-                                    <p class="text-sm mb-0">As confidentiality concerns rise whenever AI is being used, Multyx strives to promote confidentiality at any cost.</p>
+                                    <p class="text-sm mb-0">Individuals and legislators have become extremely aware of data protection over the past few years. Multyx's solution embarces confidentiality as the main pillar and takes zero-trust approach.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -97,8 +96,8 @@
                                     <div class="feature-icon">
                                         <img src="dist/images/feature-icon-03.svg" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Cloud</h4>
-                                    <p class="text-sm mb-0">Cloud computing has been adopted by numerous companies, however some companies were left behind due to security and confidentiality concers. Multyx technology would allow for more companies to move to the cloud, while taking care of the security aspects.</p>
+                                    <h4 class="feature-title mt-24">Cloud Computing</h4>
+                                    <p class="text-sm mb-0">Migration to the cloud is on the rise, however some companies are retultant to do so due to security concers. Multyx's technology aims to alleviate these concerns and enable safe collaboration in cloud environments.</p>
                                 </div>
                             </div>
                         </div>
@@ -112,9 +111,9 @@
             <div class="container">
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
-						<a href="#">
-							<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
-						</a>
+                        <a href="#">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                        </a>
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
@@ -144,14 +143,6 @@
                                 <span class="screen-reader-text">Twitter</span>
                                 <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#0270D7"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Google</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#0270D7"/>
                                 </svg>
                             </a>
                         </li>
