--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 <div class="container">
                     <div class="cta-inner section-inner ">
                         <div class="container">
-                        <h3 class="section-title mt-0">The Team</h3>
-                        <p class="text-sm mb-0">We are a group of visionary machine-learning and security scientists with a mission to make AI solutions accessible to all domains. Our initiative involves cutting-edge research in the fields of cloud computing, AI, and confidentiality.</p>
+                        <h3 class="section-title mt-0">Creating Value from Data in a New Way</h3>
                         </div>
                         <div class="cta-cta">
                             <a class="button button-primary button-wide-mobile" href="mailto: info@multyx.ai">Get in touch</a>
@@ -78,8 +77,8 @@
                                     <div class="feature-icon">
                                         <img src="dist/images/feature-icon-01.svg" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">AI</h4>
-                                    <p class="text-sm mb-0">Artificial intelligence has evolved tremendously in the past decade.</br>That said, security concerns still curb the adoption of AI-based solutions in various industry domains.</p>
+                                    <h4 class="feature-title mt-24">Process</h4>
+                                    <p class="text-sm mb-0">A new way to process data in the cloud, whether public, private, or hybrid, or in the data center, using a breakthrough new hardware and software technology.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -87,8 +86,8 @@
                                     <div class="feature-icon">
                                         <img src="dist/images/feature-icon-02.svg" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title mt-24">Confidentiality</h4>
-                                    <p class="text-sm mb-0">Individuals and legislators have become extremely aware of data protection over the past few years. Multyx's solution embarces confidentiality as the main pillar and takes zero-trust approach.</p>
+                                    <h4 class="feature-title mt-24">Collaborate</h4>
+                                    <p class="text-sm mb-0">Remote and online collaboration between multiple parties working together on data processing.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -96,8 +95,8 @@
                                     <div class="feature-icon">
                                         <img src="dist/images/feature-icon-03.svg" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Cloud Computing</h4>
-                                    <p class="text-sm mb-0">Migration to the cloud is on the rise, however some companies are retultant to do so due to security concers. Multyx's technology aims to alleviate these concerns and enable safe collaboration in cloud environments.</p>
+                                    <h4 class="feature-title mt-24">Execute</h4>
+                                    <p class="text-sm mb-0">Online serving of data processing results and enablement of new business models made possible through a novel combination of new hardware and software technologies.</p>
                                 </div>
                             </div>
                         </div>
