--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                         <img src="dist/images/feature-icon-02.svg" alt="Feature 02">
                                     </div>
                                     <h4 class="feature-title mt-24">Collaborate</h4>
-                                    <p class="text-sm mb-0">Remote and online collaboration between multiple parties working together on data processing.</p>
+                                    <p class="text-sm mb-0">Multiple parties can come together to process data while preserving their ownership and rights.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -96,7 +96,7 @@
                                         <img src="dist/images/feature-icon-03.svg" alt="Feature 03">
                                     </div>
                                     <h4 class="feature-title mt-24">Execute</h4>
-                                    <p class="text-sm mb-0">Online serving of data processing results and enablement of new business models made possible through a novel combination of new hardware and software technologies.</p>
+                                    <p class="text-sm mb-0">Online serving of data processing results and enablement of new business models made possible through a novel technology platform.</p>
                                 </div>
                             </div>
                         </div>
