--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         <img src="dist/images/feature-icon-01.svg" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title mt-24">Process</h4>
-                                    <p class="text-sm mb-0">A new way to process data in the cloud, whether public, private, or hybrid, or in the data center, using a breakthrough new hardware and software technology.</p>
+                                    <p class="text-sm mb-0">A new way to process data in the cloud, whether public or private, using a breakthrough new hardware and software technology.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
