--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mutyx</title>
+    <title>Multyx</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
@@ -18,7 +18,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-                                <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                                <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo" width=50px height=50x>
                             </a>
                         </h1>
                     </div>
@@ -59,10 +59,10 @@
                 <div class="container">
                     <div class="cta-inner section-inner ">
                         <div class="container">
-                        <h3 class="section-title mt-0">Creating Value from Data in a New Way</h3>
+                        <h3 class="section-title mt-0">Confidential AI Collaboration Platform</h3>
                         </div>
                         <div class="cta-cta">
-                            <a class="button button-primary button-wide-mobile" href="mailto: info@multyx.ai">Get in touch</a>
+                            <a class="button button-primary button-wide-mobile" href="mailto: info@multyx.ai">Request a Demo</a>
                         </div>
                     </div>
                 </div>
@@ -104,6 +104,15 @@
                 </div>
             </section>
 
+            <section class="description section">
+                <div class="container-sm">
+                    <div class="text-center">
+                            <h2> </h2>
+                            <h2 class="hero-title section-title mt-0">Analysis of Original Data with Scalable<br> Zero-Trust Confidentiality</h2>
+                            <p class="section-paragraph mb-0">With the Multyx SaaS platform and its intuitive UI, companies can easily and cost-effectively collaborate with AI partners on analysis of sensitive data, while preserving data confidentiality, at a large scale. A unique capability enabled by the platform is analysis of original data as-is, while confidentiality and security are preserved by cloud or on-prem hardware mechanisms based on standard computing equipment.</p>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="site-footer">
@@ -111,7 +120,7 @@
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo" width=50x height="=50x">
                         </a>
                     </div>
                     <ul class="invisible footer-links list-reset">
@@ -130,11 +139,9 @@
                     </ul>
                     <ul class="footer-social-links list-reset">
                         <li>
-                            <a hidden href="#">
-                                <span class="screen-reader-text">Facebook</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#0270D7"/>
-                                </svg>
+                            <a href="https://www.linkedin.com/company/79615021/">
+                                <span class="screen-reader-text">LinkedIn</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  width="35" height="35" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M21,21H17V14.25C17,13.19 15.81,12.31 14.75,12.31C13.69,12.31 13,13.19 13,14.25V21H9V9H13V11C13.66,9.93 15.36,9.24 16.5,9.24C19,9.24 21,11.28 21,13.75V21M7,21H3V9H7V21M5,3A2,2 0 0,1 7,5A2,2 0 0,1 5,7A2,2 0 0,1 3,5A2,2 0 0,1 5,3Z" /></svg>
                             </a>
                         </li>
                         <li>
